code25_all/scala/7866571.txt
trait First {
  override def greet() {
    super.greet
    println("First")
  }
}

scala/scala_learning/traits_hierarchy.scala:3: error: value greet is not a member of java.lang.Object with ScalaObject
    super.greet
          ^

